--- a/.dockerignore
+++ b/.dockerignore
@@ -1,15 +1,28 @@
-# Ignorar docker-compose y archivos locales
-docker-compose.yml
-.env
-
-# Ignorar caches, venv, etc.
-__pycache__/
-*.pyc
-*.log
-.env.*
-venv/
-.envrc
-
-# Ignorar directorios del IDE
+# IDEs
 .vscode/
 .idea/
+.vs/
+*.vsidx
+*.suo
+*.user
+
+# Python
+__pycache__/
+*.pyc
+*.pyo
+
+# Variables de entorno / secretos
+.env
+*.env
+config.json
+
+# Logs
+*.log
+
+# Archivos de datos que no necesitas en la imagen
+*.xlsx
+*.pdf
+
+# Archivos generados temporales
+Downloads/
+*.pid
