--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,17 +6,23 @@ x-orchestrator-base: &orchestrator-base
   networks:
     - orchestrator_network
   environment:
-    - HOST_DOWNLOADS_PATH=C:/Users/Brandon/Downloads
+      #- HOST_DOWNLOADS_PATH=C:/Users/Brandon/Downloads
+      - HOST_DOWNLOADS_PATH=${HOST_DOWNLOADS_PATH}
+      #- HOST_CODIGO_PATH=C:/Users/Brandon/Desktop/Contenedores/Web_Corredor/Codigo
+      - HOST_CODIGO_PATH=${HOST_CODIGO_PATH}
   env_file:
-    - C:/Users/Brandon/Desktop/DOC_INCLUSIONES_RENOVACIONES/produccion.env
+    #- C:/Users/Brandon/Desktop/DOC_INCLUSIONES_RENOVACIONES/produccion.env
+    - ${HOST_CREDENCIALES_PATH} 
   volumes:
     - /var/run/docker.sock:/var/run/docker.sock
+    - "${HOST_DOWNLOADS_PATH}:/app/Downloads"
   restart: "no"
 
 x-orchestrator-dev: &orchestrator-dev
   <<: *orchestrator-base
   env_file:
-    - C:/Users/Brandon/Desktop/DOC_INCLUSIONES_RENOVACIONES/desarrollo.env
+    #- C:/Users/Brandon/Desktop/DOC_INCLUSIONES_RENOVACIONES/desarrollo.env
+    - ${HOST_CREDENCIALES_PATH_PRUEBA}
 #---------------------------------------
 
 services:                           # declara los servicios (contenedores) que Compose va a gestionar
@@ -31,7 +37,8 @@ services:                           # declara los servicios (contenedores) que C
       - rimac_Web:/codigo_rimac_Web
       - rutas_sync:/app/sync
       - /var/run/docker.sock:/var/run/docker.sock
-      - C:/Users/Brandon/Desktop/DOC_INCLUSIONES_RENOVACIONES/produccion.env:/app/variables.env
+      #- C:/Users/Brandon/Desktop/DOC_INCLUSIONES_RENOVACIONES/produccion.env:/app/variables.env
+      - "${HOST_CREDENCIALES_PATH}:/app/variables.env"
       - ./Codigo:/app/Codigo   # 👈 TU CÓDIGO
     command: python3 Codigo/Ejecutivos/it.py
 
@@ -46,11 +53,14 @@ services:                           # declara los servicios (contenedores) que C
       - rimac_SAS:/codigo_rimac_SAS
       - rutas_sync:/app/sync
       - /var/run/docker.sock:/var/run/docker.sock
-      - C:/Users/Brandon/Desktop/DOC_INCLUSIONES_RENOVACIONES/produccion.env:/app/variables.env
+      #- C:/Users/Brandon/Desktop/DOC_INCLUSIONES_RENOVACIONES/produccion.env:/app/variables.env
+      - "${HOST_CREDENCIALES_PATH}:/app/variables.env"
       - ./Codigo:/app/Codigo   # 👈 TU CÓDIGO
-    environment:
-      - HOST_DOWNLOADS_PATH=C:/Users/Brandon/Downloads
-      - HOST_CODIGO_PATH=C:/Users/Brandon/Desktop/Contenedores/Web_Corredor/Codigo
+    # environment:
+    #   #- HOST_DOWNLOADS_PATH=C:/Users/Brandon/Downloads
+    #   - HOST_DOWNLOADS_PATH=${HOST_DOWNLOADS_PATH}
+    #   #- HOST_CODIGO_PATH=C:/Users/Brandon/Desktop/Contenedores/Web_Corredor/Codigo
+    #   - HOST_CODIGO_PATH=${HOST_CODIGO_PATH}
     command: python3 Codigo/Webhook/webhook.py
 
   ariadne_orchestrator:
@@ -59,7 +69,8 @@ services:                           # declara los servicios (contenedores) que C
     profiles: ["ariadne"]
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
-      - C:/Users/Brandon/Desktop/DOC_INCLUSIONES_RENOVACIONES/produccion.env:/app/variables.env
+      #- C:/Users/Brandon/Desktop/DOC_INCLUSIONES_RENOVACIONES/produccion.env:/app/variables.env
+      - "${HOST_CREDENCIALES_PATH}:/app/variables.env"
       - ./Codigo:/app/Codigo   # 👈 TU CÓDIGO
     command: python3 Ejecutivos/ariadne.py
 
@@ -70,7 +81,8 @@ services:                           # declara los servicios (contenedores) que C
     volumes:
       - rimac_SAS:/codigo_rimac_SAS
       - /var/run/docker.sock:/var/run/docker.sock
-      - C:/Users/Brandon/Desktop/DOC_INCLUSIONES_RENOVACIONES/produccion.env:/app/variables.env
+      #- C:/Users/Brandon/Desktop/DOC_INCLUSIONES_RENOVACIONES/produccion.env:/app/variables.env
+      - "${HOST_CREDENCIALES_PATH}:/app/variables.env" 
       - ./Codigo:/app/Codigo   # 👈 TU CÓDIGO
     command: python3 Codigo/Ejecutivos/jishu.py
 
@@ -85,7 +97,8 @@ services:                           # declara los servicios (contenedores) que C
       - rimac_Web:/codigo_rimac_Web
       - rutas_sync:/app/sync
       - /var/run/docker.sock:/var/run/docker.sock
-      - C:/Users/Brandon/Desktop/DOC_INCLUSIONES_RENOVACIONES/desarrollo.env:/app/variables.env
+      #- C:/Users/Brandon/Desktop/DOC_INCLUSIONES_RENOVACIONES/desarrollo.env:/app/variables.env
+      - "${HOST_CREDENCIALES_PATH_PRUEBA}:/app/variables.env"
     command: python3 Codigo/Ejecutivos/it.py
 
 volumes:
